Replaces 'jku' and 'x5u' representation with java.net.URI